--- a/toiminta.html
+++ b/toiminta.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" media="screen and (max-width: 650px)" href="mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 651px)" href="style.css"/>
+    <link rel="stylesheet" media="screen and (max-width: 650px)" href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 651px)" href="css/style.css"/>
     <title>LP Etusivu</title>
 </head>
 <body>
@@ -35,20 +35,20 @@
             </div>
             <img class="main-img" src="img/ikäkaudet.png" alt="">
             <div class="textblock2">
-                <img class="main-img" src="img/lp-kuva1.png" alt="">
+                <img class="history-img" src="img/lp-kuva1.png" alt="">
                 <h3>Kolkkapojat 7-9 v.</h3>
                 <p class="basic-text">Kolkkien ryhmää kutsutaan laumaksi. Laumaa johtaa vähintään yksi täysi-ikäinen laumanjohtaja ja yksi apujohtaja. Leikit, seikkailut ja tarinat ovat kolkkatoiminnassa tärkeitä. Viikoittaisissa partiokokouksissa kolkkapojat pääsevät ottamaan tuntumaa monenlaiseen partioon kuuluvaan tekemiseen. Ensimmäiset kokemukset retkeilystä ja leirielämästä myös yleensä saadaan kolkkavuosina.</p>
-                <img class="main-img" src="img/lp-kuva2.png" alt="">
+                <img class="history-img" src="img/lp-kuva2.png" alt="">
                 <h3>Seikkailijat 10-12 v.</h3>
                 <p class="basic-text">Seikkailijoiden ryhmää kutsutaan joukkueeksi. Viikoittaisissa partiokokouksissa seikkailijat opettelevat partion perustaitoja ja retkeilevät paljon. Seikkailijoilla on mahdollisuus osallistua viikonloppuretkille, talviretkille, partiotaitokilpailuihin ja kesäleirille</p>
-                <img class="main-img" src="img/lp-kuva3.png" alt="">
+                <img class="history-img" src="img/lp-kuva3.png" alt="">
                 <h3>Tarpojat 12-15 v.</h3>
                 <p class="basic-text">Tarpojien ryhmää kutsutaan vartioksi ja se kokoontuu viikoittain. Tarpojien partiokokouksissa teemoina ovat luovuus, selviytyminen, leiri ja yhteiskunta. Tarpojilla on mahdollisuus osallistua viikonloppuretkille, talvileirille, partiotaitokilpailuihin ja kesäleirille.</p>
-                <img class="main-img" src="img/lp-kuva4.png" alt="">
+                <img class="history-img" src="img/lp-kuva4.png" alt="">
                 <h3>Samoajat 15-17 v.</h3>
                 <p class="basic-text">Samoajien ohjelmaan kuuluu olennaisena osana ryhmänohjaajakoulutus ja johtamisharjoittelu. Samoajat toimivat tarpojien tai seikkailijoiden vartionjohtajina tai apujohtajina. <br> <br>
                 Vartionjohtajakoulutuksen suorittaneilla Samoajilla on mahdollisuus osallistua kaikille lippukunnan retkille ja leireille johtajina. Lisäksi samoajat voivat veloituksetta osallistua piirin koulutuksiin, esim. erätaito-, leikki- ja ensiapukursseille.</p>
-                <img class="main-img" src="img/lp-kuva5.png" alt="">
+                <img class="history-img" src="img/lp-kuva5.png" alt="">
                 <h3>Vaeltajat 18+ v.</h3>
                 <p class="basic-text">Vaeltajat toimivat kaikkien ryhmien johtajina, lippukunnan leirien ja retkien johtajina ja ottavat vastuutehtäviä, aina lippukunnanjohtajuutta myöten.<br><br>Vaeltajat voivat suorittaa Partiojohtajan Peruskurssin ja osallistua piirin tai kattojärjestön koulutuksiin ja esim. ulkomaanmatkoille. Partiokurssit ovat vaeltajille ilmaisia.</p>
             </div>
