--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <img class="main-img" src="img\vincent-riszdorfer-1453674-unsplash.jpg" alt="">
             <h3>Kevätkauden toimintaa</h3>
-            <div class="calendar">        
+            <div class="calendar" id="lo-calendar">        
                 <article>
                     <h4>TAMMIKUU</h4>
                     <ul>
@@ -102,7 +102,7 @@
                     </ul>
                 </article>
             </div>
-            <div class="times">
+            <div class="times" id="lo-times">
                 <h3>Kokousajat</h3>
                 <article>
                     <h4>1.-luokkalaiset, ikäkausi 2011</h4>
