--- a/kamppa.html
+++ b/kamppa.html
@@ -29,7 +29,7 @@
             <a href="liity.html">liity</a>
         </button>
         <main class="main-text">
-            <h2>Kotkanpesä <br> Lauttapartion kämppä</h2>
+            <h2 id="lo-kamppa-img">Kotkanpesä <br> Lauttapartion kämppä</h2>
             <img class="history-img" src="img/kotkanpesaetu.jpg" alt="">
             <h4>KOTKANPESÄN ESITTELY</h4>
             <p class="basic-text">Kotkanpesä on saunalla varustettu erähenkinen hirsikämppä, idyllisen suolammen rannalla Karkkilassa. Kämppä sijaitsee Lauttapartion omistamalla kahden hehtaarin suuruisella tontilla. Sisätilat jakautuvat isoon huoneeseen jossa ovat laverit ja takka, sekä keittiöön ja saunaan. Kämpän etupuolella on myös tilava terassi, ilta-auringon suuntaan. Läheisyydessä sijaitsevat puuvaja, vessa ja nuotiopaikka. Nuotiopaikan vierestä löytyy myös telttapaikkoja. Kotkanpesän kompostoiva vessa valmistui kesällä 2003. Samassa yhteydessä hankittiin myös ympärivuoden toimiva lämpökompostori ruuantähteille ja kaminan tuhkille. Vuonna 1998 kämpälle johtanut noin kilometrin mittainen polku korvattiin mäkeen rakennetulla soratiellä.</p>
