--- a/liity.html
+++ b/liity.html
@@ -40,7 +40,7 @@
                 <p class="basic-text">Ryhmät aloittavat syyskuun alussa ja joka syksy perustetaan uusi 7-vuotiaiden ryhmä. Myös vanhemmat partioon halukkaat ovat tervetulleita mukaan. Tietoa kokoontumisajoista saat sivulta Ryhmät. <br>
                 Ilmoittautua voit sähköpostitse lähettämällä seuraavat tiedot osoitteeseen lauttapartio(a)gmail.com <br> tai lähettämällä tekstiviesti suoraan lippukunnanjohtaja Atte Österholmille <br> 040 779 5618.</p>
             </div>
-            <div class="calendar">        
+            <div class="calendar" id="lo-calendar">        
                 <article>
                     <h4>Uuden jäsenen tiedot:</h4>
                     <ul>
@@ -60,7 +60,7 @@
                     </ul>
                 </article>
             </div>
-            <p class="basic-text">Lauttapartion kolo, eli toimitilat sijaitsevat Lauttasaaren kirkolla. <br> Osoite: Myllykallionrinne 1 D, <br> 2. kerros, 00200 Helsinki</p>
+            <p class="basic-text" id="lo-adr">Lauttapartion kolo, eli toimitilat sijaitsevat Lauttasaaren kirkolla. <br> Osoite: Myllykallionrinne 1 D, <br> 2. kerros, 00200 Helsinki</p>
         </main>
         <footer class="footer">
             <div class="social">
