--- a/lpk.html
+++ b/lpk.html
@@ -33,7 +33,7 @@
                 <h2>Lauttapartio Ry.</h2>
                 <p class="basic-text">Lauttapartiossa on yhteensä yli sata jäsentä. Lippukunta on jaettu neljään osastoon ikäkausittain: Kolkkapoikaosastoon (KPO), Seikkailijaosastoon, Tarpojaosastoon (TPO) ja Eräpoikaosastoon (EPO). Lisätietoa osastoista löydät johtajaneuvoston ja toimihenkilöiden jälkeen. <br> <br> Alla olevasta Marmeladiportaasta löydät johtajaneuvoston (JN) jäsenet ja toimihenkilöt sekä osastojen johtajat.</p>
             </div>
-            <div class="times">
+            <div class="times" id="jn">
                 <h3>Johtajaneuvosto</h3>
                 <article>
                     <h4>Lippukunnanjohtaja (lpkj):</h4>
@@ -68,7 +68,7 @@
                     <p>Patrik Pomell</p>
                 </article>
             </div>
-            <div class="times">
+            <div class="times" id="tmh">
                 <h3>Toimihenkilöt</h3>
                 <article>
                     <h4>Kämpänisäntä:</h4>
@@ -119,7 +119,7 @@
                     <p>Atte Österholm (PJ), Matti Tanner, Patrik Pomell, Joel Kivimies, Patrik Uimonen</p>
                 </article>
             </div>
-            <div>
+            <div id="lo-osastot">
                 <h4>Kolkkapoikaosasto</h4>
                 <p class="basic-text">Kolkkapoikaosasto, eli KPO, vastaa lippukunnan laumatoiminnasta ja siihen kuuluvat kaikki kolkkapojat ja laumanjohtajat. KPO järjestää laumojen oman toiminnan lisäksi yhteistä ohjelmaa, kuten vuosittaisen KPO-retken sekä kolkkien oman partiotaitokilpailun. Osastoa johtaa KPOJ yhdessä laumanjohtajien kanssa.</p>
                 <h4>Seikkailijaosasto</h4>
