--- a/kamppa.html
+++ b/kamppa.html
@@ -31,9 +31,11 @@
         <main class="main-text">
             <h2 id="lo-kamppa-img">Kotkanpesä <br> Lauttapartion kämppä</h2>
             <img class="history-img" src="img/kotkanpesaetu.jpg" alt="">
-            <h4>KOTKANPESÄN ESITTELY</h4>
-            <p class="basic-text">Kotkanpesä on saunalla varustettu erähenkinen hirsikämppä, idyllisen suolammen rannalla Karkkilassa. Kämppä sijaitsee Lauttapartion omistamalla kahden hehtaarin suuruisella tontilla. Sisätilat jakautuvat isoon huoneeseen jossa ovat laverit ja takka, sekä keittiöön ja saunaan. Kämpän etupuolella on myös tilava terassi, ilta-auringon suuntaan. Läheisyydessä sijaitsevat puuvaja, vessa ja nuotiopaikka. Nuotiopaikan vierestä löytyy myös telttapaikkoja. Kotkanpesän kompostoiva vessa valmistui kesällä 2003. Samassa yhteydessä hankittiin myös ympärivuoden toimiva lämpökompostori ruuantähteille ja kaminan tuhkille. Vuonna 1998 kämpälle johtanut noin kilometrin mittainen polku korvattiin mäkeen rakennetulla soratiellä.</p>
-            <div class="info-list">        
+            <div id="esittely">
+                <h4 id="kamppa-otsikko-1">KOTKANPESÄN ESITTELY</h4>
+                <p class="basic-text">Kotkanpesä on saunalla varustettu erähenkinen hirsikämppä, idyllisen suolammen rannalla Karkkilassa. Kämppä sijaitsee Lauttapartion omistamalla kahden hehtaarin suuruisella tontilla. Sisätilat jakautuvat isoon huoneeseen jossa ovat laverit ja takka, sekä keittiöön ja saunaan. Kämpän etupuolella on myös tilava terassi, ilta-auringon suuntaan. Läheisyydessä sijaitsevat puuvaja, vessa ja nuotiopaikka. Nuotiopaikan vierestä löytyy myös telttapaikkoja. Kotkanpesän kompostoiva vessa valmistui kesällä 2003. Samassa yhteydessä hankittiin myös ympärivuoden toimiva lämpökompostori ruuantähteille ja kaminan tuhkille. Vuonna 1998 kämpälle johtanut noin kilometrin mittainen polku korvattiin mäkeen rakennetulla soratiellä.</p>
+            </div>
+            <div id="gear-list" class="info-list">
                 <article>
                     <h4>KÄMPPÄFAKTAA</h4>
                     <ul>
@@ -70,8 +72,10 @@
                     </ul>
                 </article>
             </div>
-            <h4>KUNNOSSAPITO</h4>
-            <p class="basic-text">Kotkanpesästä huolehtii Kämppätoimikunta kämpänisännän johdolla. Toimikunta järjestää kämpällä puutalkoot noin kerran vuodessa. Kämpänkäyttötoimikunta on viime vuosina uusinut muun muassa saunan, ison huoneen lattian, katon päällysteen, kämpän ja vajan puunsuojauksen, sekä kuistin laudoituksen. Tuoreimpia toimikunnan aikaansaannoksia ovat kompostoivan vessan rakentaminen, sekä laiturin jatko-osan ja lämpökompostorin hankkiminen.</p>
+            <div id="maintenance">
+                <h4>KUNNOSSAPITO</h4>
+                <p class="basic-text">Kotkanpesästä huolehtii Kämppätoimikunta kämpänisännän johdolla. Toimikunta järjestää kämpällä puutalkoot noin kerran vuodessa. Kämpänkäyttötoimikunta on viime vuosina uusinut muun muassa saunan, ison huoneen lattian, katon päällysteen, kämpän ja vajan puunsuojauksen, sekä kuistin laudoituksen. Tuoreimpia toimikunnan aikaansaannoksia ovat kompostoivan vessan rakentaminen, sekä laiturin jatko-osan ja lämpökompostorin hankkiminen.</p>
+            </div>
             <img  class="history-img" src="img/kotkanpesasivu.jpg" alt="">
             <h4>VARAUKSET</h4>
             <p class="basic-text">Kolon ilmoitustaulun kämppävarauslistaan. Vapaita viikonloppuja voi myös kysellä kämpänisännältä, mutta varauksissa etusijalla ovat aina vartiot ja laumat. Lauttapartion Johtajaneuvoston päätöksellä kämppää ei vuokrata partion ulkopuolisille tahoille! Partiolippukunnille vuokraus onnistuu varaustilanteen mukaan. Partiolippukunnilta viikonlopun hinta on 70 euroa. <br> <br> Kämpän avaimia ja varaustilannetta voi tiedustella kämpänisäntä Matti Tannerilta (puh. 0400 8811410)</p>
